--- a/age-calculator.html
+++ b/age-calculator.html
@@ -59,28 +59,27 @@
     "name": "Free Age Calculator | All Tool AI",
     "url": "https://www.alltoolai.com/age-calculator",
     "description": "Calculate your exact age in years, months, and days with All Tool AI's free, private, and secure age calculator. Works worldwide—no data sharing or tracking.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/age-calculator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "@id": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/calculator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "WebPage",
+    "@type": "Software",
     "name": "Age Calculator",
     "operatingSystem": "Web",
     "applicationCategory": "UtilitiesApplication",
     "description": "Free online age calculator that computes your exact age in years, months, days, hours, and minutes from your date of birth.",
     "url": "https://www.alltoolai.com/age-calculator",
-    "image": "https://www.alltoolai.com/assets/images/age-calculator-icon.png",
-    "author": {
-      "@type": "Organization",
-      "name": "All Tool AI",
-      "url": "https://www.alltoolai.com"
-    },
     "offers": {
       "@type": "Offer",
       "price": "0",
@@ -93,7 +92,16 @@
       "Total days, hours, and minutes lived",
       "Private and offline processing",
       "Supports international date formats"
-    ]
+    ],
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/age-calculator"
+    }
   }
   </script>
   <script type="application/ld+json">
