--- a/bmi-calculator.html
+++ b/bmi-calculator.html
@@ -50,17 +50,22 @@
     "name": "BMI Calculator",  
     "url": "https://www.alltoolai.com/bmi-calculator",  
     "description": "Free BMI calculator to check your Body Mass Index using metric or imperial units. Instant, accurate, private tool to find your ideal weight range.",  
-    "inLanguage": "en",  
-    "isPartOf": {  
-      "@type": "WebSite",  
-      "url": "https://www.alltoolai.com/"  
-    }  
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/bmi-calculator"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/calculator-tools"
+    }
   }  
   </script>  
   <script type="application/ld+json">  
   {  
     "@context": "https://schema.org",  
-    "@type": "SoftwareApplication",  
+    "@type": "Software",  
     "name": "BMI Calculator",  
     "operatingSystem": "All",  
     "applicationCategory": "HealthApplication",  
@@ -78,11 +83,15 @@
       "price": "0",  
       "priceCurrency": "USD"  
     },  
-    "publisher": {  
-      "@type": "Organization",  
-      "name": "AllToolAI",  
-      "url": "https://www.alltoolai.com/"  
-    }  
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/bmi-calculator"
+    }
   }  
   </script>  
   <script type="application/ld+json">
