--- a/bmr-calculator.html
+++ b/bmr-calculator.html
@@ -53,17 +53,22 @@
     "name": "BMR, TDEE & Macro Calculator | Free Calorie & Macro Planner",
     "url": "https://www.alltoolai.com/bmr-calculator",
     "description": "Instantly calculate your Basal Metabolic Rate (BMR) and Total Daily Energy Expenditure (TDEE). See your calorie and macro targets for weight loss, maintenance, or muscle gain.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/bmr-calculator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/calculator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "BMR, TDEE & Macro Calculator",
     "applicationCategory": "HealthApplication",
     "operatingSystem": "Any",
@@ -80,10 +85,14 @@
       "price": "0",
       "priceCurrency": "USD"
     },
-    "creator": {
+    "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/bmr-calculator"
     }
   }
   </script>
