--- a/calculator-tools.html
+++ b/calculator-tools.html
@@ -52,7 +52,14 @@
     "url": "https://www.alltoolai.com/calculator-tools",
     "name": "Free Online Calculator Tools | BMI, Loan, Percentage & More",
     "description": "Use All Tool AI’s free calculator tools to calculate BMI, BMR, loan, interest, age, percentage, and more. 100% free, secure, and privacy-first.",
+    "applicationCategory": "CalculatorApplication",
+    "operatingSystem": "Web",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/calculator-tools"
+    },
     "isPartOf": {
       "@type": "WebSite",
       "url": "https://www.alltoolai.com/"
@@ -79,7 +86,6 @@
     "@type": "Organization",
     "name": "All Tool AI",
     "url": "https://www.alltoolai.com/",
-    "logo": "https://www.alltoolai.com/assets/icon/favicon.svg",
     "description": "All Tool AI offers free online calculators for health, finance, and mathematics, designed to be fast, accurate, and privacy-first.",
     "sameAs": [
       "https://www.facebook.com/alltoolai",
@@ -133,20 +139,102 @@
     "itemListOrder": "Ascending",
     "numberOfItems": 14,
     "itemListElement": [
-      { "@type": "ListItem", "position": 1, "name": "Fertilizer Calculator", "url": "https://www.alltoolai.com/fertilizer-calculator" },
-      { "@type": "ListItem", "position": 2, "name": "Age Calculator", "url": "https://www.alltoolai.com/age-calculator" },
-      { "@type": "ListItem", "position": 3, "name": "Calorie Calculator", "url": "https://www.alltoolai.com/calorie-calculator" },
-      { "@type": "ListItem", "position": 4, "name": "BMI Calculator", "url": "https://www.alltoolai.com/bmi-calculator" },
-      { "@type": "ListItem", "position": 5, "name": "BMR Calculator", "url": "https://www.alltoolai.com/bmr-calculator" },
-      { "@type": "ListItem", "position": 6, "name": "Compound Interest Calculator", "url": "https://www.alltoolai.com/compound-interest-calculator" },
-      { "@type": "ListItem", "position": 7, "name": "Loan Calculator", "url": "https://www.alltoolai.com/loan-calculator" },
-      { "@type": "ListItem", "position": 8, "name": "Date Calculator", "url": "https://www.alltoolai.com/date-calculator" },
-      { "@type": "ListItem", "position": 9, "name": "IP Subnet Calculator", "url": "https://www.alltoolai.com/ip-subnet-calculator" },
-      { "@type": "ListItem", "position": 10, "name": "Percentage Calculator", "url": "https://www.alltoolai.com/percentage-calculator" },
-      { "@type": "ListItem", "position": 11, "name": "Scientific Calculator", "url": "https://www.alltoolai.com/scientific-calculator" },
-      { "@type": "ListItem", "position": 12, "name": "Math Equation Solver", "url": "https://www.alltoolai.com/math-equation-solver" },
-      { "@type": "ListItem", "position": 13, "name": "Algebra Solver", "url": "https://www.alltoolai.com/algebra-solver" },
-      { "@type": "ListItem", "position": 14, "name": "Trigonometry Calculator", "url": "https://www.alltoolai.com/trigonometry-calculator" }     
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Fertilizer Calculator",
+        "url": "https://www.alltoolai.com/fertilizer-calculator",
+        "applicationCategory": "AgricultureTool",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Age Calculator",
+        "url": "https://www.alltoolai.com/age-calculator",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Calorie Calculator",
+        "url": "https://www.alltoolai.com/calorie-calculator",
+        "applicationCategory": "HealthApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 4,
+        "name": "BMI Calculator",
+        "url": "https://www.alltoolai.com/bmi-calculator",
+        "applicationCategory": "HealthApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 5,
+        "name": "BMR Calculator",
+        "url": "https://www.alltoolai.com/bmr-calculator",
+        "applicationCategory": "HealthApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 6,
+        "name": "Compound Interest Calculator",
+        "url": "https://www.alltoolai.com/compound-interest-calculator",
+        "applicationCategory": "FinanceApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 7,
+        "name": "Loan Calculator",
+        "url": "https://www.alltoolai.com/loan-calculator",
+        "applicationCategory": "FinanceApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 8,
+        "name": "Date Calculator",
+        "url": "https://www.alltoolai.com/date-calculator",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 9,
+        "name": "IP Subnet Calculator",
+        "url": "https://www.alltoolai.com/ip-subnet-calculator",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 10,
+        "name": "Percentage Calculator",
+        "url": "https://www.alltoolai.com/percentage-calculator",
+        "applicationCategory": "CalculatorApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 11,
+        "name": "Scientific Calculator",
+        "url": "https://www.alltoolai.com/scientific-calculator",
+        "applicationCategory": "CalculatorApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 12,
+        "name": "Trigonometry Calculator",
+        "url": "https://www.alltoolai.com/trigonometry-calculator",
+        "applicationCategory": "EducationalApplication",
+        "operatingSystem": "Web"
+      }
     ]
   }
   </script>
