--- a/calorie-calculator.html
+++ b/calorie-calculator.html
@@ -50,17 +50,22 @@
     "name": "Daily Calorie Calculator (TDEE & Macros)",
     "url": "https://www.alltoolai.com/calorie-calculator",
     "description": "Free calorie calculator that estimates your daily energy needs (TDEE) and personalized macronutrient plan using the Revised Harris–Benedict equation.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/calorie-calculator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/calculator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Calorie Calculator",
     "operatingSystem": "Any",
     "applicationCategory": "HealthApplication",
@@ -71,10 +76,14 @@
     },
     "url": "https://www.alltoolai.com/calorie-calculator",
     "description": "A free, science-based calorie calculator that estimates TDEE and personalized macros for maintenance, loss, or gain goals.",
-    "creator": {
+    "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/calorie-calculator"
     }
   }
   </script>
