--- a/compound-interest-calculator.html
+++ b/compound-interest-calculator.html
@@ -55,27 +55,27 @@
     "name": "Compound Interest Calculator",
     "url": "https://www.alltoolai.com/compound-interest-calculator",
     "description": "Free, fast, and private compound interest calculator. Calculate future value with daily, weekly, monthly, quarterly, or annual compounding.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/compound-interest-calculator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "@id": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/calculator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Compound Interest Calculator",
     "operatingSystem": "Any",
     "applicationCategory": "FinanceApplication",
     "description": "A free, fast, and private compound interest calculator that runs locally in your browser. Supports multiple compounding frequencies and currencies.",
     "url": "https://www.alltoolai.com/compound-interest-calculator",
-    "creator": {
-      "@type": "Organization",
-      "name": "AllToolAI",
-      "url": "https://www.alltoolai.com/"
-    },
     "featureList": [
       "Daily, weekly, monthly, quarterly, and annual compounding",
       "Date-based and duration-based calculations",
@@ -86,6 +86,15 @@
       "@type": "Offer",
       "price": "0",
       "priceCurrency": "USD"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/compound-interest-calculator"
     }
   }
   </script>
