--- a/date-calculator.html
+++ b/date-calculator.html
@@ -60,17 +60,22 @@
     "name": "Online Date Calculator: Time Between Dates",
     "url": "https://www.alltoolai.com/date-calculator",
     "description": "Free, private, and accurate online date calculator to find the time between two dates, add or subtract from a date, and determine the day of the week.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/date-calculator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/calculator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "AllToolAI Date Calculator",
     "operatingSystem": "Any",
     "applicationCategory": "UtilitiesApplication",
@@ -88,7 +93,16 @@
       "Handles leap years and timezone differences",
       "Works locally in your browser for privacy"
     ],
-    "applicationSubCategory": "Date and Time Calculator"
+    "applicationSubCategory": "Date and Time Calculator",
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/date-calculator"
+    }
   }
   </script>
   <script type="application/ld+json">
