--- a/fertilizer-calculator.html
+++ b/fertilizer-calculator.html
@@ -50,17 +50,22 @@
     "name": "Fertilizer Calculator",
     "url": "https://www.alltoolai.com/fertilizer-calculator",
     "description": "Fast, free fertilizer calculator for precise NPK rates, costs, and conversions between kg/ha and lbs/acre. Optimized for global agriculture and soil types.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/fertilizer-calculator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "@id": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/calculator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Fertilizer Calculator",
     "url": "https://www.alltoolai.com/fertilizer-calculator",
     "applicationCategory": "AgricultureTool",
@@ -77,7 +82,16 @@
       "Split application planner",
       "Soil type adjustments",
       "Cost estimation and budgeting"
-    ]
+    ],
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/fertilizer-calculator"
+    }
   }
   </script>
   <script type="application/ld+json">
