--- a/loan-calculator.html
+++ b/loan-calculator.html
@@ -51,6 +51,16 @@
     "name": "Loan & EMI Calculator | AllToolAI",
     "url": "https://www.alltoolai.com/loan-calculator",
     "description": "Fast, private, and free loan calculator for home, auto, and personal loans. Calculate EMI, total interest, and view amortization schedules securely on your device.",
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/loan-calculator"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/calculator-tools"
+    },
     "breadcrumb": {
       "@type": "BreadcrumbList",
       "itemListElement": [
@@ -79,7 +89,7 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Loan & EMI Calculator",
     "operatingSystem": "All (Web-based)",
     "applicationCategory": "FinanceApplication",
@@ -101,7 +111,11 @@
     "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
-      "url": "https://www.alltoolai.com"
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/loan-calculator"
     }
   }
   </script>
