--- a/percentage-calculator.html
+++ b/percentage-calculator.html
@@ -55,17 +55,22 @@
     "name": "Percentage Calculator",
     "url": "https://www.alltoolai.com/percentage-calculator",
     "description": "Free online percentage calculator for fast, accurate percentage calculations: X% of Y, percent change, increase/decrease, reverse percentage and more.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/percentage-calculator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/calculator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Percentage Calculator",
     "operatingSystem": "All",
     "applicationCategory": "CalculatorApplication",
@@ -87,6 +92,10 @@
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/percentage-calculator"
     }
   }
   </script>
