--- a/scientific-calculator.html
+++ b/scientific-calculator.html
@@ -51,17 +51,22 @@
     "name": "Free Online Scientific Calculator | All Tool AI",
     "url": "https://www.alltoolai.com/scientific-calculator",
     "description": "Use our free online scientific calculator for advanced math: trigonometry, logarithms, powers, roots, factorials, and percent. Fast, private, and works locally in your browser.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/scientific-calculator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/calculator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Scientific Calculator",
     "applicationCategory": "CalculatorApplication",
     "operatingSystem": "Web",
@@ -86,10 +91,14 @@
       "category": "Free",
       "availability": "https://schema.org/InStock"
     },
-    "creator": {
+    "publisher": {
       "@type": "Organization",
-      "name": "All Tool AI",
-      "url": "https://www.alltoolai.com"
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/scientific-calculator"
     }
   }
   </script>
