--- a/trigonometry-calculator.html
+++ b/trigonometry-calculator.html
@@ -51,27 +51,27 @@
     "name": "Trigonometry Calculator",
     "url": "https://www.alltoolai.com/trigonometry-calculator",
     "description": "Free, private, and accurate trigonometry calculator for sin, cos, tan, inverse, and hyperbolic functions. Works locally in your browser without tracking.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/trigonometry-calculator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/calculator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Trigonometry Calculator",
     "operatingSystem": "Web",
     "applicationCategory": "EducationalApplication",
     "description": "A free online trigonometry calculator for sin, cos, tan, inverse, and hyperbolic functions. Works locally in your browser for complete privacy.",
     "url": "https://www.alltoolai.com/trigonometry-calculator",
-    "creator": {
-      "@type": "Organization",
-      "name": "All Tool AI",
-      "url": "https://www.alltoolai.com/"
-    },
     "featureList": [
       "sin, cos, tan, csc, sec, cot functions",
       "Inverse and hyperbolic calculations",
@@ -83,6 +83,15 @@
       "@type": "Offer",
       "price": "0",
       "priceCurrency": "USD"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/trigonometry-calculator"
     }
   }
   </script>
