--- a/ip-subnet-calculator.html
+++ b/ip-subnet-calculator.html
@@ -51,31 +51,40 @@
     "url": "https://www.alltoolai.com/ip-subnet-calculator",
     "name": "IP Subnet Calculator (IPv4/CIDR) | Free, Fast, Private | AllToolAI",
     "description": "Free IP Subnet Calculator to compute network address, broadcast address, usable hosts, subnet masks, wildcard masks, and binary representations for IPv4/CIDR inputs. 100% private, runs locally in your browser.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/ip-subnet-calculator"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/calculator-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "IP Subnet Calculator",
     "operatingSystem": "Web",
     "applicationCategory": "UtilityApplication",
     "description": "A free, fast, and private IPv4/CIDR subnet calculator that provides network details, usable hosts, wildcard masks, and binary representations directly in your browser.",
     "url": "https://www.alltoolai.com/ip-subnet-calculator",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
     "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com/"
     },
-    "offers": {
-      "@type": "Offer",
-      "price": "0",
-      "priceCurrency": "USD"
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/ip-subnet-calculator"
     }
   }
   </script>
