--- a/calculator-tools.html
+++ b/calculator-tools.html
@@ -208,7 +208,7 @@
         "position": 9,
         "name": "IP Subnet Calculator",
         "url": "https://www.alltoolai.com/ip-subnet-calculator",
-        "applicationCategory": "UtilityApplication",
+        "applicationCategory": "NetworkUtility",
         "operatingSystem": "Web"
       },
       {
