--- a/index.html
+++ b/index.html
@@ -85,21 +85,22 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "Offer",
-    "name": "All Tool AI — Lifetime Free Access",
+    "@type": "WebApplication",
+    "name": "All Tool AI",
     "url": "https://www.alltoolai.com/",
     "applicationCategory": "UtilitiesApplication",
     "operatingSystem": "Web",
-    "priceCurrency": "USD",
-    "price": "0",
-    "availability": "https://schema.org/InStock",
-    "itemCondition": "https://schema.org/NewCondition",
-    "seller": {
-      "@type": "Organization",
-      "name": "All Tool AI",
-      "url": "https://www.alltoolai.com/"
-    },
-    "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required."
+    "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required.",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "availability": "https://schema.org/InStock",
+      "seller": {
+        "@type": "Organization",
+        "name": "All Tool AI"
+      }
+    }
   }
   </script>
   <script type="application/ld+json">
