--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "WebApplication",
+    "@type": "Software",
     "name": "All Tool AI",
     "url": "https://www.alltoolai.com/",
     "applicationCategory": "UtilitiesApplication",
