--- a/ip-subnet-calculator.html
+++ b/ip-subnet-calculator.html
@@ -8,24 +8,22 @@
 
   <!-- Core SEO -->
   <title>IP Subnet Calculator & Mask Tool | Visual IPv4 Subnetting | AllToolAI</title>
-  <meta name="description" content="Free IP subnet calculator for IPv4/CIDR. Instantly get network & broadcast addresses, usable host range, subnet & wildcard masks, and binary. Fast, accurate, and private runs locally in your browser. Lifetime free & unlimited." />
-  <meta name="keywords" content="IP subnet calculator, subnet calculator, IPv4 calculator, CIDR calculator, CIDR to subnet mask, network address calculator, broadcast address, usable host range, wildcard mask calculator, subnetting practice, class A B C, /24 /23 /22, ccna subnet, firewall wildcard mask, VPC subnetting, network planning tool, USA UK India EU Australia Canada UAE Singapore" />
+  <meta name="description" content="The best free IP subnet calculator and subnet mask calculator. Instantly get network addresses, usable hosts, and wildcards. 100% private, visual subnet calculator for IPv4. Fast, secure, and lifetime free." />
+  <meta name="keywords" content="subnet calculator, subnet mask calculator, network subnet calculator, subnetting ip calculator, visual subnet calculator, calculator subnet, ipv4 subnetting calculator, how to calculate subnet, how to calculate subnet from ip address, how to subnet mask calculation, CIDR to mask, network address, broadcast address, IP range, CCNA tools, USA, UK, India, Global" />
   <meta name="robots" content="index, follow, max-snippet, max-image-preview" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="IP Subnet Calculator (IPv4/CIDR) | Free, Fast, Private | AllToolAI" />
-  <meta property="og:description" content="Calculate network/broadcast addresses, usable hosts, subnet & wildcard masks, and binary. Private by design processing happens locally. Lifetime free & unlimited." />
+  <meta property="og:title" content="IP Subnet Calculator & Mask Tool | Visual IPv4 Subnetting | AllToolAI" />
+  <meta property="og:description" content="Top-rated network subnet calculator. 100% confidential and free. Calculate IPv4 subnetting, masks, and binary visualization instantly." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.alltoolai.com/ip-subnet-calculator" />
-  <meta property="og:image" content="https://www.alltoolai.com/assets/images/og/ip-subnet-calculator.png" />
   <meta property="og:site_name" content="AllToolAI" />
   <meta property="og:locale" content="en_US" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="IP Subnet Calculator (IPv4/CIDR) | Free, Fast, Private | AllToolAI" />
-  <meta name="twitter:description" content="Fast, accurate IPv4 subnet calculator. Network/broadcast, hosts, masks, binary runs locally, no data sent. Free & unlimited." />
-  <meta name="twitter:image" content="https://www.alltoolai.com/assets/images/og/ip-subnet-calculator.png" />
+  <meta name="twitter:title" content="IP Subnet Calculator & Mask Tool | Visual IPv4 Subnetting | AllToolAI" />
+  <meta name="twitter:description" content="Fast, accurate IPv4 subnetting calculator. Private local processing. Get masks, ranges, and binaries. Lifetime free." />
 
   <!-- Hreflang -->
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/ip-subnet-calculator" />
