--- a/bmi-calculator.html
+++ b/bmi-calculator.html
@@ -222,8 +222,8 @@
 
                     <div class="w-full max-w-2xl mx-auto space-y-6">
                         <div class="flex p-1 bg-slate-200 dark:bg-slate-900 rounded-lg">
-                            <button data-unit="metric" class="w-1/2 py-3 px-4 rounded-md font-semibold transition-all duration-300 bg-white dark:bg-slate-800 border border-indigo-300">Metric (kg/cm)</button>
-                            <button data-unit="imperial" class="w-1/2 py-3 px-4 rounded-md font-semibold transition-all duration-300 text-slate-600 dark:text-slate-400 bg-slate-200 dark:bg-slate-900">Imperial (lb/ft)</button>
+                            <button data-unit="metric" class="w-1/2 py-3 px-4 rounded-md font-semibold transition-all duration-300 text-white bg-indigo-600 dark:bg-indigo-500">Metric (kg/cm)</button>
+                            <button data-unit="imperial" class="w-1/2 py-3 px-4 rounded-md font-semibold transition-all duration-300 text-slate-900 dark:text-white bg-slate-200 dark:bg-slate-900">Imperial (lb/ft)</button>
                         </div>
                         
                         <div data-inputs="metric" class="grid grid-cols-1 sm:grid-cols-2 gap-x-6 gap-y-4">
@@ -253,7 +253,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div><label for="weight-lb" class="block text-sm font-medium text-slate-900 dark:text-slate-200">Weight (lb)</label><div class="mt-2"><input type="number" min="0" id="weight-lb" placeholder="e.g., 165" class="block w-full rounded-md border-0 py-2.5 px-3 bg-slate-200 text-slate-900 dark:bg-slate-900 dark:text-slate-200"></div></div>
+                            <div><label for="weight-lb" class="block text-sm font-medium text-slate-900 dark:text-slate-200">Weight (pound)</label><div class="mt-2"><input type="number" min="0" id="weight-lb" placeholder="e.g., 165" class="block w-full rounded-md border-0 py-2.5 px-3 bg-slate-200 text-slate-900 dark:bg-slate-900 dark:text-slate-200"></div></div>
                         </div>
                         
                         <div data-id="error-message" class="text-center"><p class="text-sm font-medium text-red-600 dark:text-red-400"></p></div>
