--- a/calculator-tools.html
+++ b/calculator-tools.html
@@ -442,6 +442,32 @@
                   </div>
 
                   <div class="p-4 mx-auto bg-white rounded-lg card-glow duration-300 transition-all m-4 border border-indigo-300 dark:bg-slate-800 dark:border-slate-700">
+                    <a href="/army-body-fat-calculator" aria-label="Open Army Body Fat Calculator tool">
+                      <div class="grid grid-cols-2 gap-2 items-center">
+                        <div class="mx-auto w-14 h-14 my-4 rounded-full flex items-center bg-indigo-100 dark:bg-indigo-900" style="margin-right: 0%;">
+                          <svg class="mx-auto w-8 h-8 text-indigo-600 dark:text-emerald-100" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 8v-2a2 2 0 0 1 2 -2h2" />
+                            <path d="M4 16v2a2 2 0 0 0 2 2h2" /><path d="M16 4h2a2 2 0 0 1 2 2v2" /><path d="M16 20h2a2 2 0 0 0 2 -2v-2" />
+                            <path d="M12 8m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" /><path d="M10 17v-1a2 2 0 1 1 4 0v1" />
+                            <path d="M8 10c.666 .666 1.334 1 2 1h4c.666 0 1.334 -.334 2 -1" /><path d="M12 11v3" />
+                          </svg>
+                        </div>
+                        <div class="mx-auto w-14 h-14 my-4 rounded-full flex items-center bg-indigo-100 dark:bg-indigo-900" style="margin-left: 0%;">
+                          <svg class="mx-auto w-8 h-8 text-indigo-600 dark:text-emerald-100" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <path d="M4 3m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v14a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" />
+                            <path d="M8 7m0 1a1 1 0 0 1 1 -1h6a1 1 0 0 1 1 1v1a1 1 0 0 1 -1 1h-6a1 1 0 0 1 -1 -1z" />
+                            <path d="M8 14l0 .01" /><path d="M12 14l0 .01" /><path d="M16 14l0 .01" /><path d="M8 17l0 .01" />
+                            <path d="M12 17l0 .01" /><path d="M16 17l0 .01" />
+                          </svg>
+                        </div>
+                      </div>
+                      <h1 class="text-2xl font-bold mb-4">Army Body Fat Calculator</h1>
+                      <p class="text-base">Calculate your U.S. Army body fat percentage using the official AR 600‑9 tape‑test method.</p>
+                    </a>
+                  </div>
+
+                  <div class="p-4 mx-auto bg-white rounded-lg card-glow duration-300 transition-all m-4 border border-indigo-300 dark:bg-slate-800 dark:border-slate-700">
                     <a href="/bmr-calculator" aria-label="Open BMR Calculator tool">
                       <div class="grid grid-cols-2 gap-2 items-center">
                         <div class="mx-auto w-14 h-14 my-4 rounded-full flex items-center bg-indigo-100 dark:bg-indigo-900" style="margin-right: 0%;">
