--- a/calculator-tools.html
+++ b/calculator-tools.html
@@ -137,7 +137,7 @@
     "@type": "ItemList",
     "name": "Calculator Tools List",
     "itemListOrder": "Ascending",
-    "numberOfItems": 12,
+    "numberOfItems": 13,
     "itemListElement": [
       {
         "@type": "ListItem",
@@ -174,6 +174,14 @@
       {
         "@type": "ListItem",
         "position": 5,
+        "name": "Army Body Fat Calculator",
+        "url": "https://www.alltoolai.com/army-body-fat-calculator",
+        "applicationCategory": "HealthApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 6,
         "name": "BMR Calculator",
         "url": "https://www.alltoolai.com/bmr-calculator",
         "applicationCategory": "HealthApplication",
@@ -181,7 +189,7 @@
       },
       {
         "@type": "ListItem",
-        "position": 6,
+        "position": 7,
         "name": "Compound Interest Calculator",
         "url": "https://www.alltoolai.com/compound-interest-calculator",
         "applicationCategory": "FinanceApplication",
@@ -189,7 +197,7 @@
       },
       {
         "@type": "ListItem",
-        "position": 7,
+        "position": 8,
         "name": "Loan Calculator",
         "url": "https://www.alltoolai.com/loan-calculator",
         "applicationCategory": "FinanceApplication",
@@ -197,7 +205,7 @@
       },
       {
         "@type": "ListItem",
-        "position": 8,
+        "position": 9,
         "name": "Date Calculator",
         "url": "https://www.alltoolai.com/date-calculator",
         "applicationCategory": "UtilitiesApplication",
@@ -205,7 +213,7 @@
       },
       {
         "@type": "ListItem",
-        "position": 9,
+        "position": 10,
         "name": "IP Subnet Calculator",
         "url": "https://www.alltoolai.com/ip-subnet-calculator",
         "applicationCategory": "NetworkUtility",
@@ -213,7 +221,7 @@
       },
       {
         "@type": "ListItem",
-        "position": 10,
+        "position": 11,
         "name": "Percentage Calculator",
         "url": "https://www.alltoolai.com/percentage-calculator",
         "applicationCategory": "CalculatorApplication",
@@ -221,7 +229,7 @@
       },
       {
         "@type": "ListItem",
-        "position": 11,
+        "position": 12,
         "name": "Scientific Calculator",
         "url": "https://www.alltoolai.com/scientific-calculator",
         "applicationCategory": "CalculatorApplication",
@@ -229,7 +237,7 @@
       },
       {
         "@type": "ListItem",
-        "position": 12,
+        "position": 13,
         "name": "Trigonometry Calculator",
         "url": "https://www.alltoolai.com/trigonometry-calculator",
         "applicationCategory": "EducationalApplication",
