--- a/age-calculator.html
+++ b/age-calculator.html
@@ -176,7 +176,7 @@
   <!-- 3) Non-blocking load for your Tailwind build -->
   <link rel="preload" href="/assets/style/style.css" as="style" />
   <link rel="stylesheet" href="/assets/style/style.css" media="print" onload="this.media='all'" />
-  <link rel="stylesheet" href="/assets/style/style.css" />
+  <link rel="stylesheet" href="./assets/style/style.css" />
 
   <script src="/assets/js/header.js" defer></script>
   <script src="/assets/calculator/calculator-ft.js" defer></script>
@@ -256,15 +256,15 @@
                             <div class="text-center space-y-4">
                               <h2 class="text-2xl font-bold text-slate-800 dark:text-slate-200">Your Life in Numbers</h2>
                               <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
-                                <div class="bg-slate-100 p-4 rounded-xl dark:bg-slate-700">
+                                <div class="bg-slate-200 p-4 rounded-xl dark:bg-slate-700">
                                   <h3 class="font-semibold text-slate-600 dark:text-slate-400">Total Days Lived</h3>
                                   <p id="total-days" class="text-2xl font-bold text-slate-800 mt-1 dark:text-slate-200"></p>
                                 </div>
-                                <div class="bg-slate-100 p-4 rounded-xl dark:bg-slate-700">
+                                <div class="bg-slate-200 p-4 rounded-xl dark:bg-slate-700">
                                   <h3 class="font-semibold text-slate-600 dark:text-slate-400">Total Hours Lived</h3>
                                   <p id="total-hours" class="text-2xl font-bold text-slate-800 mt-1 dark:text-slate-200"></p>
                                 </div>
-                                <div class="bg-slate-100 p-4 rounded-xl dark:bg-slate-700">
+                                <div class="bg-slate-200 p-4 rounded-xl dark:bg-slate-700">
                                   <h3 class="font-semibold text-slate-600 dark:text-slate-400">Total Minutes Lived</h3>
                                   <p id="total-minutes" class="text-2xl font-bold text-slate-800 mt-1 dark:text-slate-200"></p>
                                 </div>
@@ -272,7 +272,7 @@
                             </div>
                             <div class="text-center space-y-4">
                               <h2 class="text-2xl font-bold text-slate-800 dark:text-slate-200">Next Birthday Countdown</h2>
-                              <div class="bg-slate-100 p-4 rounded-xl dark:bg-slate-700">
+                              <div class="bg-slate-200 p-4 rounded-xl dark:bg-slate-700">
                                 <p class="text-lg text-slate-700 dark:text-slate-300"><span id="countdown-days" class="text-3xl sm:text-4xl font-extrabold text-indigo-600 dark:text-emerald-100"></span> Days to Go!</p>
                               </div>
                             </div>
