--- a/compound-interest-calculator.html
+++ b/compound-interest-calculator.html
@@ -556,7 +556,7 @@
 <!-- :: Footer PLACEHOLDER :: -->
 <div id="footer-placeholder"></div>
 
-<script src="compound.js" defer></script>
+<script src="/assets/calculator/compound.js" defer></script>
 
 </body>
 </html>
