--- a/bmr-tdee-macro-calculator.html
+++ b/bmr-tdee-macro-calculator.html
@@ -70,7 +70,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Software",
-    "name": "BMR & TDEE Macro Calculator",
+    "name": "BMR, TDEE & Macro Calculator",
     "applicationCategory": "HealthApplication",
     "operatingSystem": "Any",
     "url": "https://www.alltoolai.com/bmr-tdee-macro-calculator",
