--- a/bmr-tdee-macro-calculator.html
+++ b/bmr-tdee-macro-calculator.html
@@ -524,7 +524,7 @@ html.dark .unit-toggle-btn.active { background-color: #4f46e5; }
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/calorie-calculator">Calorie Calculator</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/bmi-calculator">BMI Calculator</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/army-body-fat-calculator">Army Body Fat Calculator</a>,
-              <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/bmr-tdee-macro-calculator">BMR Calculator</a>,
+              <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/bmr-tdee-macro-calculator">BMR, TDEE & Macro Calculator</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/compound-interest-calculator">Compound Interest Calculator</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/loan-calculator">Loan Calculator</a>,
               <a class="text-indigo-600 dark:text-indigo-400 hover:underline" href="https://www.alltoolai.com/date-calculator">Date Calculator</a>,
