--- a/age-calculator.html
+++ b/age-calculator.html
@@ -176,7 +176,7 @@
   <!-- 3) Non-blocking load for your Tailwind build -->
   <link rel="preload" href="/assets/style/style.css" as="style" />
   <link rel="stylesheet" href="/assets/style/style.css" media="print" onload="this.media='all'" />
-  <link rel="stylesheet" href="./assets/style/style.css" />
+  <link rel="stylesheet" href="/assets/style/style.css" />
 
   <script src="/assets/js/header.js" defer></script>
   <script src="/assets/calculator/calculator-ft.js" defer></script>
